tests/frontend/fail/array/out_of_bounds_storage.act
constructor of B
interface constructor()

creates

  int[2] a := [1,2]


behaviour f of B
interface f(uint c)

storage

    a[c] => 4
